# Security-Tool-based-on-linux-terminal

./: README.md
build.ver.26.1/: CMakeLists.txt  Compress.hpp  Core.hpp  GeneralFileOper.hpp  Program.cpp  RawBuilder.ver.26.1.rar  Shell.hpp  TUI.cpp  TuiFileManager.hpp  typelib.hpp
build.ver.26.1/stableComposition/: Compress.hpp  Core.hpp  TUI.hpp  TuiFileManager.hpp
build.ver.26.1/testUnit/: shellUnitTest.cpp  unit001
